--- a/index.html
+++ b/index.html
@@ -5,38 +5,77 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="styles.css" type="text/css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Intro component with sign up form</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <!--  
   <style>
-    .attribution { font-size: 16px; text-align: center; }
+    .attribution { font-size: 25px; 
+    background-color: brown;}
+    h1{ background-color: cadetblue; font-size:20px;}
     .attribution a { color: hsl(228, 45%, 44%); }
+    .button { font-size: large;}
+    .aside { text-align: left;    }
+    .article{ text-align: center;  }
+    .form {  }
   </style>
+  -->
 </head>
 <body>
+  <div class="attribution">
+    <div class="aside">
 
-  Learn to code by watching others
+ <h1>Learn to code by <br>
+  watching others </h1>
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
-
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
+ <span>See how experienced developers solve problems in real-time.</span> <br>
+ <span>Watching scripted tutorials is great, 
+  but understanding how developers <br>
+  think is invaluable.</span>
   
+    </div>
+    
+  
+    <div class="article">
+    <button class="button">
+     <span><strong>Try it free 7 days</strong> then $20/mo. thereafter  </span>
+    </button>
+<form action="#" class="form">
+  <label for="firstname"></label>
+    <input type="text" name= "form" id="firstname" value="FAROUK" >
+  
+  <br>
+<label for="lastname"> 
+  <input type="text" name="form" id="lastname" value="Last Name" >
+</label>
+ <br>
+<label for="email">
+   <input type="email"  name="form" id="email" value="Email Address" >
+</label>
+  <br>
+ <label for="password">
+   <input type="password" name="form" id="password" value="password"> 
+ </label>
+ <br>
+ <label for="submit" >
+   <input type="submit"  id="submit" value="CLAIM YOUR FREE TRIAL ">
+ </label>
+ <br>
+
+  
+<p class="Terms"> By clicking the button, you are agreeing to our <a href="#" > Terms and Services </a></p>
+
+  </form>
+    </div> 
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">FAROUK AFOLABI</a>.
     </p>
   </footer>
-</body>
+</div>
+</body> 
 </html>
