finished the mobile view

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </button>
 <form action="#" class="form">
   <label for="firstname"></label>
-    <input type="text" name= "form" id="firstname" value="FAROUK" >
+    <input type="text" name= "form" id="firstname" value="First Name" >
   
   <br>
 <label for="lastname"> 
