done with mobile view

--- a/index.html
+++ b/index.html
@@ -28,42 +28,40 @@
   <div class="attribution">
     <div class="aside">
 
- <h1>Learn to code by <br>
-  watching others </h1>
+ <h1>Learn to code by watching others </h1>
 
- <span>See how experienced developers solve problems in real-time.</span> <br>
- <span>Watching scripted tutorials is great, 
-  but understanding how developers <br>
-  think is invaluable.</span>
+ <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+  but understanding how developers think is invaluable.
+</p>
   
     </div>
     
   
     <div class="article">
     <button class="button">
-     <span><strong>Try it free 7 days</strong> then $20/mo. thereafter  </span>
+     <p><strong>Try it free 7 days</strong> then $20/mo. thereafter  <p>
     </button>
 <form action="#" class="form">
   <label for="firstname"></label>
-    <input type="text" name= "form" id="firstname" value="First Name" >
+    <input type="text" name= "form" class="firstname" value="First Name" >
   
   <br>
 <label for="lastname"> 
-  <input type="text" name="form" id="lastname" value="Last Name" >
+  <input type="text" name="form" class="lastname" value="Last Name" >
 </label>
- <br>
+ 
 <label for="email">
-   <input type="email"  name="form" id="email" value="Email Address" >
+   <input type="email"  name="form" class="email" value="Email Address" >
 </label>
-  <br>
+  
  <label for="password">
-   <input type="password" name="form" id="password" value="password"> 
+   <input type="password" name="form" class="password" value="password"> 
  </label>
- <br>
+ 
  <label for="submit" >
-   <input type="submit"  id="submit" value="CLAIM YOUR FREE TRIAL ">
- </label>
- <br>
+   <input type="submit"  id="submit" class="submit" value="claim your free trial ">
+ </button>
+ 
 
   
 <p class="Terms"> By clicking the button, you are agreeing to our <a href="#" > Terms and Services </a></p>
