--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </form>
     </div> 
   <footer>
-    <p class="attribution">
+    <p class="attribute">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">FAROUK AFOLABI</a>.
     </p>
